# tidb

./: DEPS.bzl  errors.toml  go.mod  go.sum
config/: config.go
ddl/: cluster.go  ddl_api.go  partition.go
ddl/util/: util.go
domain/: BUILD.bazel  domain.go  sysvar_cache.go
errno/: errcode.go  errname.go
executor/: executor.go  infoschema_reader.go  set.go  show.go
executor/aggfuncs/: func_json_arrayagg.go  func_json_objectagg.go  func_json_objectagg_test.go
executor/test/showtest/: show_test.go
expression/: builtin.go  builtin_cast.go  builtin_cast_vec.go  builtin_json.go  builtin_json_test.go  builtin_json_vec.go  builtin_time.go  expr_to_pb.go  helper.go  integration_test.go
expression/aggregation/: agg_to_pb.go
infoschema/: tables.go
parser/ast/: dml.go
pkg/executor/: adapter.go  executor.go  infoschema_reader.go
pkg/expression/: column.go  scalar_function.go  util_test.go
pkg/indexusage/: collector.go  collector_test.go
pkg/planner/core/: logical_plan_builder.go  memtable_predicate_extractor.go
pkg/server/: conn.go
pkg/server/tests/commontest/: tidb_test.go
pkg/session/: session.go
pkg/sessionctx/stmtctx/: stmtctx.go
pkg/sessionctx/variable/: session.go
pkg/testkit/: flag.go
pkg/ttl/ttlworker/: job_manager.go  job_manager_integration_test.go  long_test.go  main_test.go  task_manager.go  task_manager_integration_test.go
pkg/util/context/: duration.go  rows.go  rows_test.go
planner/core/: integration_test.go  planbuilder.go  preprocess.go
server/: http_handler.go
session/: bootstrap.go  bootstrap_test.go  session.go
session/session_test/: session_test.go
sessionctx/variable/: mock_globalaccessor.go  session.go  sysvar.go  sysvar_test.go  tidb_vars.go  variable.go  variable_test.go
sessiontxn/staleread/: externalts_test.go  processor.go  processor_test.go  util.go
store/mockstore/unistore/tikv/: mock_region.go
table/tables/: partition.go  tables.go
tools/check/: ut.go
ttl/cache/: base_test.go  infoschema.go  table.go  table_test.go  ttlstatus.go
ttl/session/: BUILD.bazel  session.go
ttl/ttlworker/: BUILD.bazel  config.go  del.go  job.go  job_manager.go  job_manager_test.go  job_test.go  scan.go  taskgroup.go  ttlworker_test.go  worker.go  worker_test.go
types/: json_binary.go  json_binary_functions.go  json_path_expr.go  json_path_expr_test.go
util/dbterror/: ddl_terror.go
util/gcutil/: gcutil.go
util/mock/: context.go
