load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ttlworker",
    srcs = [
        "config.go",
        "del.go",
        "job.go",
        "job_manager.go",
        "scan.go",
        "worker.go",
    ],
    importpath = "github.com/pingcap/tidb/ttl/ttlworker",
    visibility = ["//visibility:public"],
    deps = [
        "//kv",
        "//parser/terror",
        "//ttl/cache",
        "//ttl/session",
        "//types",
        "//util/logutil",
        "@com_github_pingcap_errors//:errors",
        "@org_uber_go_multierr//:multierr",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "ttlworker_test",
    srcs = [
        "job_manager_test.go",
        "job_test.go",
        "ttlworker_test.go",
        "worker_test.go",
    ],
    embed = [":ttlworker"],
    deps = [
        "//infoschema",
        "//parser/model",
        "//server",
        "//sessionctx",
        "//testkit",
        "//ttl/cache",
        "//ttl/session",
        "//util/chunk",
        "//util/logutil",
        "@com_github_ngaut_pools//:pools",
        "@com_github_pingcap_errors//:errors",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_zap//:zap",
    ],
)
