load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ttlworker",
    srcs = [
        "config.go",
        "del.go",
        "job.go",
        "job_manager.go",
        "scan.go",
        "session.go",
        "worker.go",
    ],
    importpath = "github.com/pingcap/tidb/ttl/ttlworker",
    visibility = ["//visibility:public"],
    deps = [
        "//kv",
        "//parser/terror",
        "//sessionctx",
        "//sessionctx/variable",
        "//ttl/cache",
        "//ttl/session",
        "//ttl/sqlbuilder",
        "//types",
        "//util",
        "//util/chunk",
        "//util/logutil",
        "//util/sqlexec",
        "@com_github_ngaut_pools//:pools",
        "@com_github_pingcap_errors//:errors",
        "@org_golang_x_time//rate",
        "@org_uber_go_multierr//:multierr",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "ttlworker_test",
    srcs = [
        "del_test.go",
        "job_manager_test.go",
        "job_test.go",
        "scan_test.go",
        "session_test.go",
        "ttlworker_test.go",
        "worker_test.go",
    ],
    embed = [":ttlworker"],
    deps = [
        "//infoschema",
        "//parser/ast",
        "//parser/model",
        "//parser/mysql",
        "//server",
        "//sessionctx",
        "//sessionctx/variable",
        "//testkit",
        "//ttl/cache",
        "//ttl/session",
        "//types",
        "//util/chunk",
        "//util/logutil",
        "@com_github_ngaut_pools//:pools",
        "@com_github_pingcap_errors//:errors",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_x_time//rate",
        "@org_uber_go_zap//:zap",
    ],
)
